traefik/traefik-local-network-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-network
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.86.0/24
