traefik/traefik-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: ingress-controller
    app.kubernetes.io/managed-by: kubectl
