traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-loadbalancer
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: networking
    app.kubernetes.io/part-of: traefik
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.86.2
  externalTrafficPolicy: Local
  ports:
  - name: web
    port: 80
    targetPort: web
  - name: websecure
    port: 443
    targetPort: websecure
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: ingress-controller
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: networking
    app.kubernetes.io/part-of: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: ingress-controller
  ports:
    - protocol: TCP
      name: traefik
      port: 8080
      targetPort: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-tailscale
  namespace: traefik
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: networking
    app.kubernetes.io/part-of: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: ingress-controller
  ports:
    - protocol: TCP
      name: tailscale
      port: 443
      targetPort: tailscale
