traefik/traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: traefik
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - tailscale
  routes:
    - match: Host(`traefik.albinmedoc.se`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: authentik
          namespace: authentik
